--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -105,34 +105,34 @@
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
               <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
-                <mat-panel-title >
+                <mat-panel-title>
                   <a style="margin-left:0px;font-size:larger">Projects/PDR </a>
                 </mat-panel-title>
 
               </mat-expansion-panel-header>
               <mat-list>
 
-                <a mat-list-item  [routerLink]="'/PDRManagement'">General </a>
-                <a mat-list-item   [routerLink]="'/PDRManagement'"> Requirements </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Product Dev.Brief </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'">Assigning Users</a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> 21 CFR Part 11 Approvers List </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'">Stage Gate Settings </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Documents </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Assigned Formulas </a>
-                <a mat-list-item  [routerLink]="'/fetch-data'"> Products </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Change Request </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Customer Communications </a>
+                <a mat-list-item [routerLink]="'/PDRManagement'">General </a>
+                <a mat-list-item [routerLink]="'/PDRManagement'"> Requirements </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Product Dev.Brief </a>
+                <a mat-list-item [routerLink]="'/fetch-data'">Assigning Users</a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> 21 CFR Part 11 Approvers List </a>
+                <a mat-list-item [routerLink]="'/fetch-data'">Stage Gate Settings </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Documents </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Assigned Formulas </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Products </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Change Request </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Customer Communications </a>
 
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Specifications </a>
-                <a mat-list-item   [routerLink]="'/fetch-data'"> Audit Tracking</a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Specifications </a>
+                <a mat-list-item [routerLink]="'/fetch-data'"> Audit Tracking</a>
 
               </mat-list>
             </mat-expansion-panel>
 
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Formulation</a>
@@ -144,14 +144,14 @@
 
                 <a mat-list-item [routerLink]="'/Formulalisting'"> Formula Listing </a>
                 <a mat-list-item [routerLink]="'/Formulalookup'"> Formula Lookup </a>
-               
+
 
               </mat-list>
             </mat-expansion-panel>
 
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Sample Management </a>
@@ -168,7 +168,7 @@
                 <a mat-list-item [routerLink]="'/fetch-data'">Disclaimers </a>
                 <a mat-list-item [routerLink]="'/fetch-data'"> Documents </a>
                 <a mat-list-item [routerLink]="'/fetch-data'"> Document Audit </a>
-               
+
                 <a mat-list-item [routerLink]="'/fetch-data'"> Audit Tracking</a>
 
               </mat-list>
@@ -176,7 +176,7 @@
 
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Productization  </a>
@@ -198,17 +198,17 @@
                 <a mat-list-item [routerLink]="'/fetch-data'">CMO </a>
 
                 <a mat-list-item [routerLink]="'/fetch-data'">Audit </a>
-                
+
 
               </mat-list>
             </mat-expansion-panel>
 
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
-                  <a  style="margin-left:0px;font-size:larger" >Raw Materials</a>
+                  <a style="margin-left:0px;font-size:larger">Raw Materials</a>
                 </mat-panel-title>
 
               </mat-expansion-panel-header>
@@ -216,12 +216,12 @@
 
 
                 <a mat-list-item [routerLink]="'/fetch-data'"> Raw Materials </a>
-                
+
               </mat-list>
             </mat-expansion-panel>
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Suppliers</a>
@@ -232,13 +232,13 @@
 
 
                 <a mat-list-item [routerLink]="'/fetch-data'"> Suppliers </a>
-             
+
 
               </mat-list>
             </mat-expansion-panel>
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Customers</a>
@@ -249,13 +249,13 @@
 
 
                 <a mat-list-item [routerLink]="'/fetch-data'"> Customers </a>
-               
+
 
               </mat-list>
             </mat-expansion-panel>
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Product Portfolio</a>
@@ -266,12 +266,28 @@
 
 
                 <a mat-list-item [routerLink]="'/fetch-data'"> Product Portfolio </a>
-               
+
               </mat-list>
             </mat-expansion-panel>
             <mat-expansion-panel (opened)="panelOpenState = true"
                                  (closed)="panelOpenState = false">
-              <mat-expansion-panel-header  class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
+                <mat-panel-title>
+
+                  <a style="margin-left:0px;font-size:larger">Global Search</a>
+                </mat-panel-title>
+
+              </mat-expansion-panel-header>
+              <mat-list>
+
+
+                <a mat-list-item [routerLink]="'/fetch-data'"> Global Search</a>
+
+              </mat-list>
+            </mat-expansion-panel>
+            <mat-expansion-panel (opened)="panelOpenState = true"
+                                 (closed)="panelOpenState = false">
+              <mat-expansion-panel-header class="mat-elevation-z5" style="color: black; border-bottom: solid; border-color: #403e3e; border-width: 1px;">
                 <mat-panel-title>
 
                   <a style="margin-left:0px;font-size:larger">Miscellaneous</a>
@@ -282,7 +298,7 @@
 
 
                 <a mat-list-item [routerLink]="'/Unitofmeasure'">Unit Of Measure </a>
-               
+
 
               </mat-list>
             </mat-expansion-panel>
