--- a/ClientApp/src/app/pdr-management/loadspecification-parameter/loadspecification-parameter.component.css
+++ b/ClientApp/src/app/pdr-management/loadspecification-parameter/loadspecification-parameter.component.css
@@ -1,8 +1,37 @@
+.outer-div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.button-bar {
+  margin-bottom: 1rem;
+}
+
+
+
+.grid-wrapper {
+  flex: 1 1 auto;
+}
+
+
+
+.mat-grid-tile {
+  border: solid 0.1px;
+  color: black;
+}
+
+
+
 p.test {
   padding: 20px;
   text-align: left;
   font-family: Haettenschweiler
 }
+
+
 
 .margindesign {
   border: 0.5px solid maroon;
@@ -12,25 +41,29 @@ p.test {
   margin: 20px;
 }
 
+
+
 input {
   margin: 5px;
 }
-.header {
-  position: sticky;
-  top: 0;
-  background-color: white;
-}
+
+
+
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
   padding: 0 10px 10px 10px;
   border-bottom: none;
 }
 
+
+
 legend.scheduler-border {
   width: auto !important;
   border: none;
   font-size: 14px;
 }
+
+
 
 h2.design {
   text-align: center;
@@ -40,21 +73,31 @@ h2.design {
   padding-bottom: 30px;
 }
 
+
+
 .textalign1 {
 }
+
+
 
 .mat-tab-group {
   margin-bottom: 48px;
 }
 
+
+
 .tabcolor {
   color: #bb2205;
 }
+
+
 
 .tabbutto:hover {
   background-color: whitesmoke;
   color: dimgrey;
 }
+
+
 
 .tabrowli {
   text-align: center;
@@ -66,16 +109,22 @@ h2.design {
 }
 
 
+
+
 .buttoncolor {
   border-color: #214252;
   background-color: #214252;
 }
+
+
 
 .tab-close {
   color: lightseagreen;
   text-align: right;
   cursor: pointer;
 }
+
+
 
 .button {
   border: none;
@@ -84,4 +133,81 @@ h2.design {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+
+
+table td {
+  position: relative;
+}
+
+
+
+  table td input {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    border: none;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+/*table {
+width: 100%;
+border-collapse: collapse;
+}
+
+
+
+th,
+td {
+padding: 8px;
+}
+
+
+
+th {
+text-align: left;
+background: #eee;
+position: sticky;
+top: 0px;
+}
+
+
+
+.wrapper {
+border: 1px solid #ddd;
+width: 100%;
+height: 300px;
+overflow-y: auto;
+}*/
+.my-custom-scrollbar {
+  position: relative;
+  height: 450px;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+
+
+.table-wrapper-scroll-y {
+  display: block;
+}
+
+
+
+.header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
+
+
+
+.table tr.active td {
+  background-color: #150485 !important;
+  color: white;
 }
