--- a/ClientApp/src/app/pdr-management/pdr-management.component.css
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.css
@@ -3,19 +3,23 @@ p.test {
   text-align: left;
   font-family: Haettenschweiler
 }
+
 .margindesign {
- 
   border: 0.5px solid maroon;
   padding: 50px;
-  
-  padding-bottom:10px;
-  padding-top:10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   margin: 20px;
 }
 
 input {
   margin: 5px;
 }
+.textsize {
+  font-size: 15px;
+  font-family: Verdana;
+}
+
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
   padding: 0 10px 10px 10px;
@@ -35,7 +39,11 @@ h2.design {
   padding-top: 40px;
   padding-bottom: 30px;
 }
-
+.header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
 .textalign1 {
 }
 
@@ -51,6 +59,7 @@ h2.design {
   background-color: whitesmoke;
   color: dimgrey;
 }
+
 .tabrowli {
   text-align: center;
   margin: 2px;
@@ -80,11 +89,13 @@ h2.design {
   display: inline-block;
   font-size: 16px;
 }
+
 .textsize {
   font-size: 15px;
-
 }
-
+.textsize2 {
+  font-size: 18px;
+}
 label {
   font-size: 15px;
   font-family: Verdana;
@@ -92,12 +103,18 @@ label {
   text-align: right;
   padding-right: 20px;
   display: inline-block;
-  min-width: 150px;
+  min-width: 15%;
 }
+
 .form-check-input {
   width: 20px;
   height: 20px;
 }
+.form-check-input2 {
+  width: 16px;
+  height: 16px;
+}
+
 .alert {
   position: fixed;
   top: 5%;
@@ -111,6 +128,7 @@ label {
   transition: all 0.2s ease-in-out;
   opacity: 0;
 }
+
 .alert2 {
   position: fixed;
   top: 5%;
