--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.css
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.css
@@ -17,7 +17,10 @@ p.test {
 input {
   margin: 5px;
 }
-
+.textsize {
+  font-size: 15px;
+  font-family: Verdana;
+}
 label {
   text-align: right;
   padding-right: 20px;
