--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>-->
 
-    <h2 style="text-align:center; margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black">Add Supplier</h2>
+    <h2 style="text-align:center; margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black"> Supplier Details</h2>
 
 
 
@@ -40,7 +40,7 @@
 
           <div class="form-inline" style="margin-top:-1%">
             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 10px; height: 40px;margin-top:10px;" (click)="ClearData();">Clear</button>
-            <label for="PRD" style="margin-left:1%;color:maroon;font-size:larger;">Supplier Rating</label>
+            <label for="PRD" style="margin-left:10%;color:maroon;font-size:larger;">Supplier Rating</label>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <ul class="list-inline rating-list" *ngFor="let star of stars" style="margin-top:1%; display: inline-block">
               <li (click)="countStar(star)" [ngClass]="{'selected': (star <= selectedValuerating)}">
@@ -63,7 +63,7 @@
 
     <nav ngbNav #nav="ngbNav" class="nav-tabs scrolling-wrapper">
       <ng-container ngbNavItem style="margin-left:20px">
-        <a class="tabcolor tabbutto tabrowli " ngbNavLink>Contact Details</a>
+        <a class="tabcolor tabbutto tabrowli textsize " ngbNavLink>Contact Details</a>
         <ng-template ngbNavContent>
           <form>
             <div class="form-row">
@@ -109,6 +109,11 @@
                     <option selected>Choose...</option>
                     <option>DHL</option>
                     <option>Federal Express</option>
+                    <option>UPS</option>
+                    <option>UPS (Expedited)</option>
+                    <option>UPS (Groung)</option>
+                    <option>US Mail</option>
+                    <option>Other</option>
                   </select>
                 </div>
 
@@ -116,8 +121,8 @@
                   <label for="inputState">Status</label>
                   <select id="inputState" style="width:60%" class="form-control" placeholder="" [(ngModel)]="SupplierStatus" #stas name="sts" value="">
                     <option selected>Choose...</option>
-                    <option>Activate</option>
-                    <option>Inactivate</option>
+                    <option>Active</option>
+                    <option>Inactive</option>
                   </select>
                 </div>
 
@@ -194,7 +199,7 @@
         </ng-template>
       </ng-container>
       <ng-container ngbNavItem style="margin-left:20px">
-        <a class="tabcolor tabbutto tabrowli " ngbNavLink>Raw Material(s)</a>
+        <a class="tabcolor tabbutto tabrowli textsize" ngbNavLink>Raw Material(s)</a>
         <ng-template ngbNavContent>
           <ng-container *ngTemplateOutlet="innerTabset"></ng-container>
           <ng-template #innerTabset class="nav-tabs">
@@ -203,15 +208,16 @@
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
                   <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;background-color:white">
-                    <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+                    <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
                       <thead>
                         <tr>
+                          <th hidden scope="col">Itemcode </th>
                           <th scope="col">Item # </th>
                           <th scope="col">INCI Name</th>
                           <th scope="col">Trade Name</th>
                           <th scope="col">Manufacturer</th>
                           <th scope="col">Supplier RM #</th>
-                          <th scope="col">Cost $</th>
+                          <th style="text-align:right" scope="col">Cost $</th>
                           <th scope="col">Unit</th>
                           <th scope="col">Approved</th>
                           <th scope="col">Approved Code</th>
@@ -219,12 +225,13 @@
                       </thead>
                       <tbody>
                         <tr *ngFor="let Rmsupplier_rmall of dataloadsupplierallrm; let i=index;">
-                          <td class="tabledatasize">{{ Rmsupplier_rmall.ItemCode}}</td>
+                          <td hidden class="tabledatasize">{{ Rmsupplier_rmall.ItemCode}}</td>
+                          <td class="tabledatasize">{{ Rmsupplier_rmall.GeneralItemCode}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.Description}}</td>
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmall.IngredientTradeName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.INNName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.SupplierRMNo}}</td>
-                          <td class="tabledatasize">{{ Rmsupplier_rmall.UnitCost}}</td>
+                          <td style="text-align:right" class="tabledatasize">{{ Rmsupplier_rmall.UnitCost}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.UnitName}}</td>
                           <td class="tabledatasize"><input type="checkbox" style="margin-left:20%;color:black" [checked]="Rmsupplier_rmall.oldvalue == 'true'" /></td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.ApprovalCode}}</td>
@@ -249,7 +256,7 @@
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
                   <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;background-color: white" >
-                    <table class="table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
+                    <table class=" table table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
                       <thead>
                         <tr>
                           <th scope="col">Item # </th>
@@ -257,7 +264,7 @@
                           <th scope="col">Trade Name</th>
                           <th scope="col">Manufacturer</th>
                           <th scope="col">Supplier RM #</th>
-                          <th scope="col">Cost $</th>
+                          <th style="text-align:right" scope="col">Cost $</th>
                           <th scope="col">Unit</th>
                         </tr>
                       </thead>
@@ -268,7 +275,7 @@
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmapproved.IngredientTradeName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmapproved.INNName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmapproved.SupplierRMNo}}</td>
-                          <td class="tabledatasize">{{ Rmsupplier_rmapproved.UnitCost}}</td>
+                          <td style="text-align:right" class="tabledatasize">{{ Rmsupplier_rmapproved.UnitCost}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmapproved.UnitName}}</td>
                         </tr>
                       </tbody>
@@ -280,7 +287,7 @@
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
                   <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto;background-color:white">
-                    <table class="table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
+                    <table class=" table table-hover table-bordered" style="margin-left: 10px; " id="table" width="98%">
                       <thead>
                         <tr>
                           <th scope="col">Item # </th>
@@ -288,7 +295,7 @@
                           <th scope="col">Trade Name</th>
                           <th scope="col">Manufacturer</th>
                           <th scope="col">Supplier RM #</th>
-                          <th scope="col">Cost $</th>
+                          <th style="text-align:right" scope="col">Cost $</th>
                           <th scope="col">Unit</th>
                         </tr>
                       </thead>
@@ -299,7 +306,7 @@
                           <td class="tabledatasize" style="width:17%">{{ Rmsupplier_rmall.IngredientTradeName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.INNName}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.SupplierRMNo}}</td>
-                          <td class="tabledatasize">{{ Rmsupplier_rmall.UnitCost}}</td>
+                          <td style="text-align:right" class="tabledatasize">{{ Rmsupplier_rmall.UnitCost}}</td>
                           <td class="tabledatasize">{{ Rmsupplier_rmall.UnitName}}</td>
                         </tr>
 
@@ -314,7 +321,7 @@
                 <ng-template ngbTabContent>
                   <h4>Double Click to Select a Raw Material</h4>
                   <div style="margin-left:1%;margin-top:1%;  overflow-y: auto;height:500px;background-color:white">
-                    <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white"  id="supplier table" width="98%">
+                    <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white"  id="supplier table" width="98%">
                       <thead>
                         <tr>
                           <th scope="col">PDR # </th>
@@ -345,16 +352,16 @@
         </ng-template>
       </ng-container>
       <ng-container ngbNavItem style="margin-left:20px">
-        <a class="tabcolor tabbutto tabrowli " ngbNavLink>Component(s)</a>
+        <a class="tabcolor tabbutto tabrowli textsize " ngbNavLink>Component(s)</a>
         <ng-template ngbNavContent>
           <h4>Double Click to Select a Raw Material</h4>
-          <div style="margin-left:1%;margin-top:1%; height:350px;background-color: white; overflow-y: auto;">
-            <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="supplier table" width="98%">
+          <div style="margin-left:1%;margin-top:1%; height:35rem;background-color: white; overflow-y: auto;">
+            <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="supplier table" width="98%">
               <thead>
                 <tr>
                   <th scope="col">Component Item # </th>
                   <th scope="col">Component Name</th>
-                  <th scope="col">Cost $</th>
+                  <th style="text-align:right" scope="col">Cost $</th>
                   <th scope="col">File Size</th>
                 </tr>
               </thead>
@@ -365,7 +372,7 @@
                 <tr *ngFor="let Component_Details of componentData " (click)="setvaluescomponent( Component_Details);" #conten>
                   <td class="tabledatasize">{{ Component_Details.ComponentItemNo }}</td>
                   <td class="tabledatasize">{{ Component_Details.ComponentName}}</td>
-                  <td class="tabledatasize">{{ Component_Details.UnitCost}}</td>
+                  <td style="text-align:right" class="tabledatasize">{{ Component_Details.UnitCost}}</td>
                   <td style="width:20%" class="tabledatasize">{{ Component_Details.Size}}</td>
                 </tr>
               </tbody>
@@ -374,12 +381,12 @@
         </ng-template>
       </ng-container>
       <ng-container ngbNavItem style="margin-left:20px">
-        <a class="tabcolor tabbutto tabrowli " ngbNavLink>Finished Product(s)</a>
+        <a class="tabcolor tabbutto tabrowli textsize " ngbNavLink>Finished Product(s)</a>
         <ng-template ngbNavContent>
           <h4>Double Click to Select a Raw Material</h4>
     
-          <dx-data-grid id="gridContainer " style="width: 100%; height: 400px;font-family:Verdana;font-style:normal;background-color:white"
-                        [height]="400"
+          <dx-data-grid id="gridContainer " style="width: 100%; height: 35rem;font-family:Verdana;font-style:normal;background-color:white"
+                      
                         (onRowPrepared)="onRowPrepared($event)"
                         (onRowInserted)=" onRowInserted($event)"
                         (onValueChanged)="onValueChanged($event)"
@@ -443,15 +450,16 @@
       </ng-container>
       <ng-container ngbNavItem style="margin-left:20px">
 
-        <a class="tabcolor tabbutto tabrowli " ngbNavLink>Audit Trail</a>
+        <a class="tabcolor tabbutto tabrowli textsize " ngbNavLink>Audit Trail</a>
         <ng-template ngbNavContent>
-          <div style="margin-left:1%;margin-top:1%; height:350px; overflow-y: auto;">
-            <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="supplier table" width="98%">
+          <div style="margin-left:1%;margin-top:1%; height:35rem; overflow-y: auto;background-color:white">
+            <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="supplier table" width="98%">
               <thead>
                 <tr>
                   <th scope="col">Date</th>
                   <th scope="col">Task</th>
-                  <th scope="col">UserName</th>
+                  <th scope="col">Username</th>
+
 
                 </tr>
               </thead>
@@ -463,6 +471,7 @@
                   <td class="tabledatasize">{{ Audit_Details.Date }}</td>
                   <td class="tabledatasize">{{ Audit_Details.Task}}</td>
                   <td class="tabledatasize">{{ Audit_Details.username}}</td>
+
 
                 </tr>
               </tbody>
