--- a/ClientApp/src/app/raw-material/load-property/load-property.component.html
+++ b/ClientApp/src/app/raw-material/load-property/load-property.component.html
@@ -52,24 +52,16 @@
   </table>
 
 </div>
+  </div>
 <div>
-  <div style="margin-top:10px;">
-    <div>
-      <form>
-        <div class="form-row">
-          <div class="col-md-6">
+ 
 
-          </div>
-          <div class="col-md-6 form-inline">
-            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="opennewproperty()">Add New Property</button>
-            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
-            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="deleteProperty()">Delete Property</button>
-            <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="closedialog()">Back</button>
-          </div>
-        </div>
-      </form>
-    </div>
+  <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
+
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%"  (click)="opennewproperty()">Add New Property</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="deleteProperty()">Delete Property</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" matDialogClose>Back</button>
+    
   </div>
 </div>
-
-  </div>
