--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.css
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.css
@@ -11,6 +11,11 @@ p.test {
   padding-top: 10px;
   margin: 20px;
 }
+.header {
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
 
 input {
   margin: 5px;
