--- a/ClientApp/src/app/raw-material/function-search/function-search.component.html
+++ b/ClientApp/src/app/raw-material/function-search/function-search.component.html
@@ -1,14 +1,6 @@
 <div style="background-color: #f6f5f1">
-  <!--<div style="overflow-y:auto;overflow-x:hidden; height:80vh;width:100%">-->
-    <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <form class="form-inline text-center" style="margin-bottom:20px;">
-          <h2 style="margin-top: 20px; font-family: Playfair Display; background-color: #f6f5f1;color: #150485" text-center>SMART</h2>
-          <h2 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: #bb2205">Formulator </h2>
-          <!--h2 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black"></h2>-->
-        </form>
-      </div>
-    </div>
+  <div style="overflow-y:auto;overflow-x:hidden; height:50vh;width:100%">
+    <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align: center;">Function Search</h2>
     <fieldset class="border p-2">
       <legend class="w-auto" style="font-size:15px;color:maroon">Search</legend>
       <div class="form-row" style="margin-top:5px;">
@@ -33,7 +25,7 @@
     <div>
       <p style="margin-left:3%;">Make your selection by Double clicking on your choice</p>
     </div>
-    <div style="margin-top:1%;">
+    <div style="margin-top:1%;background-color:white">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -64,12 +56,18 @@
         </tbody>
       </table>
     </div>
-    <div style="margin-top:6%;">
-      <div class="form-inline" style="float:right">
-        <mat-dialog-actions>
-          <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" matDialogClose>Close</button>
-        </mat-dialog-actions>
-      </div>
-    </div>
+    
   </div>
+  <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
+
+
+
+    
+ 
+
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" matDialogClose>Close</button>
+
+
+  </div>
+</div>
   <!--</div>-->
