--- a/ClientApp/src/app/raw-material/rm-vp/rm-vp.component.html
+++ b/ClientApp/src/app/raw-material/rm-vp/rm-vp.component.html
@@ -1,5 +1,5 @@
 <div style="    background-color: #f6f5f1">
-  <div style="overflow-y:auto;overflow-x:hidden; height:75vh;">
+  <div style="overflow-y:auto;overflow-x:hidden; height:80vh;">
 
     <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align: center;">RM Volume Pricing</h2>
 
@@ -98,7 +98,15 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary buttoncolor" style="margin-right:10px;height:50px;float:right;width: 120px;" matDialogClose>Back </button>
+  <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
+
+
+
+   
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" matDialogClose>Close</button>
+
+
+  </div>
 </div>
 
 
