--- a/ClientApp/src/app/raw-material/category-maintenance/category-maintenance.component.css
+++ b/ClientApp/src/app/raw-material/category-maintenance/category-maintenance.component.css
@@ -81,3 +81,15 @@ h2.design {
   display: inline-block;
   font-size: 16px;
 }
+label {
+  font-size: 15px;
+  font-family: Verdana;
+  text-align: right;
+  padding-right: 20px;
+  display: inline-block;
+  min-width: 150px;
+}
+.textsize {
+  font-size: 15px;
+  font-family: Verdana;
+}
