--- a/ClientApp/src/app/raw-material/category-maintenance/category-maintenance.component.html
+++ b/ClientApp/src/app/raw-material/category-maintenance/category-maintenance.component.html
@@ -1,91 +1,89 @@
 <div style="background-color: #f6f5f1">
   <div style="overflow-y:auto;overflow-x:hidden; height:80vh;width:100%">
-    <div class="row">
-      <div class="col-md-6 offset-md-4">
-        <form class="form-inline" style="margin-left:5%;margin-bottom:20px;">
-          <h3 style="margin-top: 20px; font-family: Playfair Display; background-color: #f6f5f1;color: #150485">SMART</h3>
-          <h3 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: #bb2205">Formulator </h3>
-          <h3 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black">-Category Maintenance</h3>
-        </form>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <div class="form-row">
-          <div class="form-group col-md-7">
-            <div class="form-inline">
-              <label for="inputDescription" style="margin-right:20px">Main Classification</label>
+    <h2 style="   font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Category Maintenance</h2>
 
-              <!--<input type="text" class="form-control" [(ngModel)]="classificat" id="inputCategory Name" placeholder="" style="margin-top:10px; width: 70%;" name="classification" #classification value="" list="classifi">
-            <datalist id="classifi">
-              <option>Choose...</option>
-              <option>Custom</option>
-              <option>RAWS-RAWS</option>
-              <option>RM-Raw Mat</option>
-            </datalist>-->
-              <select typeof="submit" class="form-control" style="width:70%;" [(ngModel)]="classify" (change)="onSelectedChange()">
-                <option selected>{{this.classifiedvalue}}</option>
-                <option *ngFor="let option of options">{{option}}</option>
+    <div class="form-row">
+      <div class="form-group col-md-7">
+        <div class="form-inline" style="margin-top:2%">
+          <label for="inputDescription">Main Classification</label>
+
+          <!--<input type="text" class="form-control" [(ngModel)]="classificat" id="inputCategory Name" placeholder="" style="margin-top:10px; width: 70%;" name="classification" #classification value="" list="classifi">
+          <datalist id="classifi">
+            <option>Choose...</option>
+            <option>Custom</option>
+            <option>RAWS-RAWS</option>
+            <option>RM-Raw Mat</option>
+          </datalist>-->
+          <select typeof="submit" class="form-control" style="width:70%;" [(ngModel)]="classify" (change)="onSelectedChange()">
+            <option selected>{{this.classifiedvalue}}</option>
+            <option *ngFor="let option of options">{{option}}</option>
 
 
 
 
-              </select>
-            </div>
+          </select>
+        </div>
 
-            <div class="form-inline">
-              <label for="inputCategory Name" style="margin-right:10px">Category Name</label>
+        <div class="form-inline">
+          <label for="inputCategory Name">Category Name</label>
 
-              <input type="text" class="form-control" [(ngModel)]="CategoryNam " id="inputCategory Name" placeholder="" style="margin-left:3%;margin-top:10px; width: 70%;" name="description" #categoryname value="">
-
-            </div>
-            <div class="form-inline">
-              <label for="inputDescription" style="margin-right:10px">Description</label>
-
-              <input type="text" class="form-control" [(ngModel)]="Descriptio" id="inputDescription" placeholder="" style="margin-left: 7%; width: 70%;" name="description" #description value="">
-            </div>
-          </div>
-          <div class="form-group col-md-3">
-            <div class="form-inline">
-              <label for="inputCategory Name" style="margin-right:10px">Category Code</label>
-
-              <input type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
-
-            </div>
-            <div class="form-inline">
-              <label for="inputDescription" style="margin-right:10px">Category Id</label>
-
-              <input type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
-            </div>
-          </div>
+          <input type="text" class="form-control" [(ngModel)]="CategoryNam " id="inputCategory Name" placeholder="" style="margin-top:10px; width: 70%;" name="description" #categoryname value="">
 
         </div>
-        <div class="form-group row" style="margin-left:30%">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1" style="color:maroon">For Formula</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="inlineRadio2" style="color:maroon">For Raw Materials</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" checked="checked" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-            <label class="form-check-label" for="inlineRadio3" style="color:maroon">Both</label>
-          </div>
-        </div>
-        <div>
-          <p>
-            Category can be set either for RM or Formula or Both. Depending on classification it will show under raw material and formula catergory. By default both will be selected and that category will show under RM and Formula category drop down.
-          </p>
+        <div class="form-inline">
+          <label for="inputDescription">Description</label>
+
+          <input type="text" class="form-control" [(ngModel)]="Descriptio" id="inputDescription" placeholder="" style=" width: 70%;" name="description" #description value="">
         </div>
       </div>
+      <div class="form-group col-md-3">
+        <div class="form-inline">
+          <label hidden for="inputCategory Name" style="margin-right:10px">Category Code</label>
+
+          <input hidden type="text" class="form-control" id="inputCategory Name" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;">
+
+        </div>
+        <div class="form-inline">
+          <label hidden for="inputDescription" style="margin-right:10px">Category Id</label>
+
+          <input hidden type="text" class="form-control" [(ngModel)]="cateid" id="inputCategoryid" placeholder="" style="margin-left:2.5%;margin-top:10px; width: 10%;" #categorymainval value="" name="categorymainval">
+        </div>
+      </div>
+
     </div>
+    <div style="margin-left:30%">
+      <mat-radio-group aria-label="Select an option" style="margin-left:0.3%" (change)="radioChange($event)">
+        <mat-radio-button class="textsize" [value]="1" [checked]=" false" style="margin-left:10px">For Formula</mat-radio-button>
+        <mat-radio-button class="textsize" [value]="1" [checked]=" false" style="margin-left:10px">For Raw Materials</mat-radio-button>
+        <mat-radio-button class="textsize" [value]="2" [checked]=" true" style="margin-left:20px">All</mat-radio-button>
+      </mat-radio-group>
+    </div>
+    <!--<div class="form-group row" style="margin-left:30%">
+      <div class="form-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <label class="form-check-label" for="inlineRadio1" style="color:maroon">For Formula</label>
+      </div>
+      <div class="form-inline">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <label class="form-check-label" for="inlineRadio2" style="color:maroon">For Raw Materials</label>
+      </div>
+      <div class="form-inline">
+        <input class="form-check-input" type="radio" checked="checked" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+        <label class="form-check-label" for="inlineRadio3" style="color:maroon">Both</label>
+      </div>
+    </div>-->
+    <div>
+      <p class="textsize">
+        Category can be set either for RM or Formula or Both. Depending on classification it will show under raw material and formula catergory. By default both will be selected and that category will show under RM and Formula category drop down.
+      </p>
+    </div>
+
+
     <div style="margin-top:1%">
       <h5>Double Click to Edit the Value in Grid</h5>
     </div>
-    <div style="margin-left:1%;margin-top:1%; height:340px; overflow-y: auto;">
-      <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
+    <div style="margin-left:1%;margin-top:1%; height:500px; overflow-y: auto; background-color:white">
+      <table class=" table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
         <thead>
           <tr>
 
@@ -111,37 +109,37 @@
       </table>
 
     </div>
-    <button (click)="addRow(row)">Add</button>
+    <!--<button (click)="addRow(row)">Add</button>-->
     <!--<div style="margin-top:6%">
-    <form>
-      <div class="form-row">
-        <div class="col-md-12 form-inline">
-          <mat-dialog-actions>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:6%;height:60px;width:35%;">Delete Category</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">New</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">Save</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">Update</button>
-            <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;" matDialogClose>Close</button>
-          </mat-dialog-actions>
-        </div>
-      </div>
-    </form>
-  </div>-->
-  </div>
- </div>
-    <div class="form-row" style=" margin-bottom:80%;position:fixed">
-      <div style="margin-left:20px;" class="form-group ">
-       
-            <div class="form-inline">
-              <mat-dialog-actions>
-                <button type="submit" class="btn btn-primary  buttoncolor" style="margin-left:230px;height:50px;"(click)="deletedata(classify.value, categoryname.value,description.value,categorymainval.value);"matDialogClose>Delete Category </button>
-                <button type="submit" class="btn btn-primary  buttoncolor" style="margin-left:30px;height:50px;width:100px;">New</button>
-                <button type="submit" class="btn btn-primary  buttoncolor" style="margin-left:30px;height:50px;width:100px;"(click)=" savedata(classify.value, categoryname.value,description.value);" matDialogClose>Save</button>
-                <button type="submit" class="btn btn-primary  buttoncolor" style="margin-left:30px;height:50px;width:100px;"(click)="updatedata(classify.value, categoryname.value,description.value,categorymainval.value);"matDialogClose>Update</button>
-                <button type="submit" class="btn btn-primary  buttoncolor" style="margin-left:30px;height:50px;width:100px;" matDialogClose>Close</button>
-              </mat-dialog-actions>
-            </div>
+      <form>
+        <div class="form-row">
+          <div class="col-md-12 form-inline">
+            <mat-dialog-actions>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:6%;height:60px;width:35%;">Delete Category</button>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">New</button>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">Save</button>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;">Update</button>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:2%;height:60px;width:15%;" matDialogClose>Close</button>
+            </mat-dialog-actions>
           </div>
         </div>
+      </form>
+    </div>-->
+  </div>
+
+  
+    <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
+
      
+      
+          <button type="submit" class="btn btn-primary  buttoncolor"  style="float:right;height:40px;margin-top:1%"  (click)="deletedata(classify.value, categoryname.value,description.value,categorymainval.value);" matDialogClose>Delete Category </button>
+          <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px">New</button>
+          <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" (click)=" savedata(classify.value, categoryname.value,description.value);" matDialogClose>Save</button>
+          <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" (click)="updatedata(classify.value, categoryname.value,description.value,categorymainval.value);" matDialogClose>Update</button>
+          <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" matDialogClose>Close</button>
+        
+     
+    </div>
+
+</div>
  
