--- a/ClientApp/src/app/raw-material/risk-phrases/risk-phrases.component.html
+++ b/ClientApp/src/app/raw-material/risk-phrases/risk-phrases.component.html
@@ -1,5 +1,5 @@
 <div style="    background-color: #f6f5f1">
-  <div style="overflow-y:auto;overflow-x:hidden; height:75vh;">
+  <div style="overflow-y:auto;overflow-x:hidden; height:80vh;">
 
     <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align: center;">EU Risk Phrases</h2>
 
@@ -7,20 +7,20 @@
       <label for="data_requirements" style="margin-top: 3%;">Risk Phrases</label>
 
       <div class="card" style="margin-left: 10px;">
-        <div class="card-body" style="width: 90%;height:80%;overflow-y:auto">
+        <div class="card-body" style="width: 90%;height:700px;overflow-y:auto">
           <ul>
             <li *ngFor="let item of list">
               <input type="checkbox" [(ngModel)]="item.checked" (change)="changeSelection()"> {{item.title}}
             </li>
 
           </ul>
-        
+
         </div>
       </div>
     </div>
 
   </div>
-  <div class="form-row">
+  <!--<div class="form-row">
     <div class="form-group col-md-6">
       <div></div>
       <button type="submit" class="btn btn-primary buttoncolor" style="margin-top: 20px;width: 120px;height:50px">select All </button>
@@ -31,5 +31,18 @@
       <button type="submit" class="btn btn-primary buttoncolor" style="margin-top: 20px; margin-right:10px;height:50px;float:right;width: 120px;" matDialogClose>Back </button>
       <button type="submit" class="btn btn-primary buttoncolor" style="margin-top: 20px; margin-right:10px;height:50px;float:right;width: 120px;"(click)="selectedcheckbox();"[mat-dialog-close]=" this.SelectedItemList"  >Select </button>
     </div>
+  </div>-->
+
+  <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
+
+
+
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:left;height:40px;margin-top:1%" (click)="deletedata(classify.value, categoryname.value,description.value,categorymainval.value);" matDialogClose>Select All</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:left;height:40px;margin-top:1%;margin-left:10px">Deselect All</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" (click)=" savedata(classify.value, categoryname.value,description.value);" matDialogClose>Back</button>
+  
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:40px;margin-top:1%;margin-right:10px" matDialogClose>Select</button>
+
+
   </div>
 </div>
