--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.css
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.css
@@ -20,7 +20,14 @@ p.test {
 input {
   margin: 5px;
 }
-
+.center {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+}
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
   padding: 0 10px 10px 10px;
