--- a/ClientApp/src/app/raw-material/sub-category-maintenance/sub-category-maintenance.component.css
+++ b/ClientApp/src/app/raw-material/sub-category-maintenance/sub-category-maintenance.component.css
@@ -101,3 +101,16 @@ h2.design {
   display: inline-block;
   font-size: 16px;
 }
+label {
+  font-size: 15px;
+  font-family: Verdana;
+  text-align: right;
+  padding-right: 20px;
+  display: inline-block;
+  min-width: 200px;
+}
+
+.textsize {
+  font-size: 15px;
+  font-family: Verdana;
+}
